data/derived/sp14/progs/unify/prog0719.ml.out
Characters 381-390:
  eval ((a, x, y) *. (a, x, y)) + ((b, x, y) *. (c, x, y));;
        ^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
